Added back links

--- a/cube.html
+++ b/cube.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="cube.css">
     </head>
     <body>
+        <nav><a href="index.html">Back</a></nav>
         <div id="scene1" class="scene">
             <div class="cube">
                 <div id="front" class="cubeface">Front</div>
