--- a/stretch.html
+++ b/stretch.html
@@ -5,7 +5,8 @@
     </head>
 
     <body>
-        <a href="cube.spin.html"><div></div></a>
+        <nav><a href="index.html">Back</a></nav>
+        <div></div>
     </body>
 
 </html>
