--- a/stretch.html
+++ b/stretch.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Stretch</title>
         <link rel="stylesheet" href="stretch.css">
     </head>
 
