Added a folder structure

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <header>Animation Experiments</header>
         <nav>
             <ul>
-                <li><a href="stretch.html">Stretching Rectangle</a></li>
-                <li><a href="cube.html">Spinning Cube</a></li>
+                <li><a href="stretch/index.html">Stretching Rectangle</a></li>
+                <li><a href="cube/index.html">Spinning Cube</a></li>
             </ul>
         </nav>
     </body>
