--- a/cube/index.html
+++ b/cube/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title>Cube</title>
-        <link rel="stylesheet" href="cube.css">
+        <link rel="stylesheet" href="../styles/cube.css">
     </head>
     <body>
-        <nav><a href="index.html">Back</a></nav>
+        <nav><a href="../index.html">Back</a></nav>
         <div id="scene1" class="scene">
             <div class="cube">
                 <div id="front" class="cubeface">Front</div>
@@ -17,6 +17,6 @@
             </div>
         </div>
         
-        <script src="cube.js"></script>
+        <script src="../scripts/cube.js"></script>
     </body>
 </html>
