--- a/stretch/index.html
+++ b/stretch/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>Stretch</title>
-        <link rel="stylesheet" href="stretch.css">
+        <link rel="stylesheet" href="../styles/stretch.css">
     </head>
 
     <body>
-        <nav><a href="index.html">Back</a></nav>
+        <nav><a href="../index.html">Back</a></nav>
         <div></div>
     </body>
 
