--- a/cube/index.html
+++ b/cube/index.html
@@ -7,7 +7,7 @@
     <body>
         <nav><a href="../index.html">Back</a></nav>
         <div id="scene1" class="scene">
-            <div class="cube">
+            <div id="cube1" class="cube">
                 <div id="front" class="cubeface">Front</div>
                 <div id="back" class="cubeface">Back</div>
                 <div id="left" class="cubeface">Left</div>
