Added meta tag for mobile use

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Animation Experiments</title>
         <link rel="stylesheet" href="styles/main.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <header><h1>Animation Experiments</h1></header>
