--- a/cube/index.html
+++ b/cube/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Cube</title>
         <link rel="stylesheet" href="../styles/cube.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <nav><a href="../index.html">Back</a></nav>
