--- a/stretch/index.html
+++ b/stretch/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Stretch</title>
         <link rel="stylesheet" href="../styles/stretch.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
     <body>
