Made sizes dynamic

--- a/index.html
+++ b/index.html
@@ -13,19 +13,12 @@
             </div>
         </a>
         <a href="cube/index.html">
-            <div id="scene" class="icon">
-                <div id="cube1" class="cube">
-                    <div id="front" class="cubeface">
-                        <div class="icon-title">Spinning Cube</div>
-                    </div>
-                    <div id="back" class="cubeface">Back</div>
-                    <div id="left" class="cubeface">Left</div>
-                    <div id="right" class="cubeface">Right</div>
-                    <div id="top" class="cubeface">Top</div>
-                    <div id="bottom" class="cubeface">Bottom</div>
-                </div>
+            <div id="cube" class="icon">
+                <div class="icon-title">Spinning Cube</div>
             </div>
         </a>
-        <div id="more" class="icon"><div class="icon-title" id="more-title">More to come ...</div></div>
+        <div id="more" class="icon">
+            <div class="icon-title" id="more-title">More to come ...</div>
+        </div>
     </body>
 </html>
