Centered layout with a wrapper div

--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
     </head>
     <body>
         <header><h1>Animation Experiments</h1></header>
-        <a href="stretch/index.html">
-            <div id="stretch" class="icon">
-                <div class="icon-title" id="stretch-title">Stretching Rectangle</div>
+        <div id="layout-container">
+            <a href="stretch/index.html">
+                <div id="stretch" class="icon">
+                    <div class="icon-title" id="stretch-title">Stretching Rectangle</div>
+                </div>
+            </a>
+            <a href="cube/index.html">
+                <div id="cube" class="icon">
+                    <div class="icon-title">Spinning Cube</div>
+                </div>
+            </a>
+            <div id="more" class="icon">
+                <div class="icon-title" id="more-title">More to come ...</div>
             </div>
-        </a>
-        <a href="cube/index.html">
-            <div id="cube" class="icon">
-                <div class="icon-title">Spinning Cube</div>
-            </div>
-        </a>
-        <div id="more" class="icon">
-            <div class="icon-title" id="more-title">More to come ...</div>
         </div>
     </body>
 </html>
